2002-10-23  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xsl: Use <pre> tag for source code examples.

2002-10-22  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_StringToUtf): One more CONST84 - now
	we pass the tests!

2002-10-21  David N. Welton  <davidw@dedasys.com>

	* src/*.c: "CONST"ification.  See http://mini.net/tcl/3669 for
	more information.

	* src/: Minor build script updates.

2002-10-20  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: "make" needed to be "make.tcl".  Thanks to Makoto
	SATOH.

2002-10-18  David N. Welton  <davidw@dedasys.com>

	* tests/get.test: Added tests for new "var get" behavior.

	* doc/rivet.xml: Documented new "var get" behavior.

	* src/rivetCore.c (Rivet_Var): Added ?default? option to "var
	get".

	* doc/examples/: Added examples for XML document.

	* doc/rivet.xml: Several examples of how to use Rivet.

2002-10-17  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Added Entities to deal with included files.  This
	makes it easier to correctly format the source code that is to be
	included.

2002-10-09  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/findapxs.tcl: Added /usr/sbin/ at the request
	of David Brancato, who notes that Redhat often locates apxs there.

2002-10-02  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Added 'Introduction' section.

2002-09-29  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Reworked several elements to better utilize
	docbook.

	* doc/rivet.xsl: Major reworking of several elements, including
	group and arg.  Added lots of style changes.

	* src/make.tcl: Add commands and dependencies to build extensions
	documents without chunks, and the main Rivet docs in chunks
	(seperate HTML files are output).

	* doc/rivet.xml: Updated docs to reflect new Apache directives.

2002-09-27  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_InitTclStuff): Change default CacheSize